--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodeshift",
+  "name": "nodeshift-express",
   "version": "0.1.0",
 
   "main": "server.js",
@@ -14,6 +14,9 @@
   },
 
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "express": "*",
+    "jade": "*"
+  },
   "devDependencies": {}
 }
